tests/negative/gold/null_check_test.gold
tests/negative/null_check_test.toit:22:7: error: Type mismatch. Expected 'int'. Got 'string'
  foo null_string            // Error, even though null could match.
      ^~~~~~~~~~~
tests/negative/null_check_test.toit:23:18: error: Type mismatch. Expected 'int'. Got 'string'
  bar --optional=null_string // Error, even though null could match.
                 ^~~~~~~~~~~
tests/negative/null_check_test.toit:25:5: error: Type mismatch. Expected 'int'. Got 'string'
  A null_string
    ^~~~~~~~~~~
tests/negative/null_check_test.toit:26:19: error: Type mismatch. Expected 'int'. Got 'string'
  A.named --field=null_string
                  ^~~~~~~~~~~
tests/negative/null_check_test.toit:29:5: error: Type mismatch: can't assign 'null' to non-nullable 'A'
  a = null
    ^
tests/negative/null_check_test.toit:31:7: error: Type mismatch: can't assign 'null' to non-nullable 'int'
  gee null
      ^~~~
tests/negative/null_check_test.toit:37:7: error: Type mismatch: can't assign 'null' to non-nullable 'int'
  gee null_local2
      ^~~~~~~~~~~
As check failed: null is not a int.
  0: gee                       tests/negative/null_check_test.toit:17:5
  1: main                      tests/negative/null_check_test.toit:31:3
  2: __entry__.<lambda>        <sdk>/core/entry.toit:48:20
